tests/sksl/errors/ReservedNameCast.glsl
### Compilation failed:

error: 1: name 'cast' is reserved
int cast;
    ^^^^
1 error
